--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <version>7.0.7</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.cjcrafter</groupId>
+            <artifactId>weaponmechanics</artifactId>
+            <version>4.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
