--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <version>0.100.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.cjcrafter</groupId>
+            <artifactId>weaponmechanics</artifactId>
+            <version>4.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
