Add mechanicscore dependency

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <version>4.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.cjcrafter</groupId>
+            <artifactId>mechanicscore</artifactId>
+            <version>4.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
