--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,8 +7,12 @@ softdepend:
   - Movecraft
   - Factions
   - Towny
+  - WeaponMechanics
 
 commands:
   creeperheal:
     description: CreeperHeal2 commands
     usage: /creeperheal <command>
+
+loadbefore:
+  - WeaponMechanics
